test/parser/invalid-escape-character.delta
// RUN: %check_errors %not %delta -parse %s

// CHECK: [[@LINE+1]]:14: error: unknown escape character '\z'
var a = "   \z"
